k8s/monitoring/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v3.14.0
          args:
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus
            - --storage.tsdb.retention.time=24h
            - --storage.tsdb.wal-compression
          ports:
            - name: http
              containerPort: 9090
          # Gives Prometheus time to start before
          # readiness/liveness checks begin.
          startupProbe:
            httpGet:
              path: /-/ready
              port: http
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5

          # Pod receives traffic only when Prometheus
          # is ready to serve requests.
          readinessProbe:
            httpGet:
              path: /-/ready
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          # Restarts the container if Prometheus becomes
          # unhealthy after it has started.
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: http
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3


          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
              readOnly: true
            - name: storage
              mountPath: /prometheus
      volumes:
        - name: config
          configMap:
            name: prometheus-config
        - name: storage
          persistentVolumeClaim:
            claimName: prometheus-data

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
